--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                                 <img src="assets/python-advanced.png" class="home-card-images">
                                 </div>
                                 <h2 class="fs-4 fw-bold">Introduction to Swift</h2>
-                                <p class="mb-0">We've created some custom feature boxes using Bootstrap icons!</p>
+                                <p class="mb-0">Learn how to design, develop and code Apps using XCode and Swift.</p>
                             </div>
                         </div>
                     </div>
@@ -116,7 +116,7 @@
                             <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
                                 <div class="feature bg-primary bg-gradient text-white rounded-3 mb-4 mt-n4"><i class="bi bi-code"></i></div>
                                 <h2 class="fs-4 fw-bold">Web Design</h2>
-                                <p class="mb-0">We keep our dependencies up to date and squash bugs as they come!</p>
+                                <p class="mb-0">This clas teaches concepts of Web Design and introduces HTML, CSS and BootStrap.</p>
                             </div>
                         </div>
                     </div>
@@ -126,7 +126,7 @@
                                 <div class="feature bg-primary bg-gradient text-white rounded-3 mb-4 mt-n4">
                                 <img src="assets/ai.png" class="home-card-images"></div>
                                 <h2 class="fs-4 fw-bold">Artifical Intelligence</h2>
-                                <p class="mb-0">Start Bootstrap has been the leader in free Bootstrap templates since 2013!</p>
+                                <p class="mb-0">Get inspired to change the future. This class provides resources to expand your knowledge in Machine Learning and AI. </p>
                             </div>
                         </div>
                     </div>
