--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                         <div class="card bg-light border-0 h-100">
                             <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
                                 <div class="feature bg-primary bg-gradient text-white rounded-3 mb-4 mt-n4">
-                                <img src="assets/python-advanced.png" class="home-card-images">
+                                <img src="assets/swift.jpeg" class="home-card-images rounded-circle">
                                 </div>
                                 <h2 class="fs-4 fw-bold">Introduction to Swift</h2>
                                 <p class="mb-0">Learn how to design, develop and code Apps using XCode and Swift.</p>
@@ -114,7 +114,9 @@
                     <div class="col-lg-6 col-xxl-4 mb-5">
                         <div class="card bg-light border-0 h-100">
                             <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
-                                <div class="feature bg-primary bg-gradient text-white rounded-3 mb-4 mt-n4"><i class="bi bi-code"></i></div>
+                                <div class="feature bg-primary bg-gradient text-white rounded-3 mb-4 mt-n4">
+                                    <img src="assets/htmlcss.png" class="home-card-images">
+                                </div>
                                 <h2 class="fs-4 fw-bold">Web Design</h2>
                                 <p class="mb-0">This clas teaches concepts of Web Design and introduces HTML, CSS and BootStrap.</p>
                             </div>
