--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <section id = "courses" class="pt-4">
             <div class="container px-lg-5" style="border:0px solid green; ">
                 <!-- Page Features-->
-                <div class="row gx-lg-4">
+                <div class="row">
                     <div class="col-lg-6 col-xxl-4 mb-5">
                         <div class="card bg-light border-0 h-100">
                             <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
@@ -94,12 +94,6 @@
                             </div>
                         </div>
                     </div>
-                </div>
-            </div>
-            <br>
-            <br>
-            <div class="container px-lg-5" style="border:0px solid blue; ">
-                <div class="row gx-lg-4">
                     <div class="col-lg-6 col-xxl-4 mb-5">
                         <div class="card bg-light border-0 h-100">
                             <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
