--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                                     <img src="assets/htmlcss.png" class="home-card-images">
                                 </div>
                                 <h2 class="fs-4 fw-bold">Web Design</h2>
-                                <p class="mb-0">This clas teaches concepts of Web Design and introduces HTML, CSS and BootStrap.</p>
+                                <p class="mb-0">This class teaches concepts of Web Design and introduces HTML, CSS and BootStrap.</p>
                             </div>
                         </div>
                     </div>
