--- a/index.html
+++ b/index.html
@@ -53,17 +53,21 @@
                         <div class="card bg-light border-0 h-100">
                             <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
                                 <div class="feature bg-primary bg-gradient text-white rounded-3 mb-4 mt-n4">
-                                <img src="assets/turtle-star.png" class="home-card-images">
+                                    <img src="assets/turtle-star.png" class="home-card-images">
                                 </div>
-                                <h2 class="fs-4 fw-bold">Turtle Graphics</h2>
-                                <p class="mb-0">Turtle Graphics is a fun way to introduce programming. 
-                                Turtle can draw intricate shapes with just a few lines. How about a star or fireworks?
+                                <h2 class="fs-4 fw-bold">Introduction to Python</h2>
+                                <p class="mb-0">
+                                    Turtle Graphics is a fun way to introduce programming.
+                                    Turtle can draw intricate shapes with just a few lines. How about a star or fireworks?
                                 </p>
                                 <br>
-                                <a class="btn btn-outline-primary" href="static/turtle.html">Learn More</a>
-                                
+                                <div class="d-grid gap-4 d-md-block">
+                                    <a class="btn btn-outline-primary" href="turtle.html">Syllabus</a>&nbsp;&nbsp;
+                                    <a class="btn btn-outline-primary" href="https://forms.gle/Td6DJ4qRE6tFWBGi6">Sign Up</a>
+                                </div>
+
+                                </div>
                             </div>
-                        </div>
                     </div>
                     <div class="col-lg-6 col-xxl-4 mb-5">
                         <div class="card bg-light border-0 h-100">
@@ -76,7 +80,7 @@
                                 Finish off with couple projects like Rock Paper Scissor, Pascal Triangle and more. 
                                 </p>
                                 <br>
-                                <a class="btn btn-outline-primary" href="static/turtle.html">Learn More</a>
+                                <a class="btn btn-outline-primary" href="static/pythonbasic.html">Learn More</a>
                             </div>
                         </div>
                     </div>
@@ -90,7 +94,7 @@
                                 <p class="mb-0">Dive deeper into Python with complex projects. Build Hangman, Breast Cancer Classifer, Natural Language Processing and more.
                                 </p>
                                 <br>
-                                <a class="btn btn-outline-primary" href="static/turtle.html">Learn More</a>
+                                <a class="btn btn-outline-primary" href="static/pythonadvanced.html">Learn More</a>
                             </div>
                         </div>
                     </div>
@@ -135,7 +139,7 @@
   </div>
 </div>
         <!-- Footer-->
-        <footer class="py-5 bg-dark">
+        <footer class="py-5" style="background-color:#003262; ">
             <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Caltechbytes 2022</p></div>
         </footer>
         <!-- Bootstrap core JS-->
