--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                                   <div class="col-lg-6 col-md-4 mt-4 mt-md-0">
                                       <div class="icon-box">
                                           <i class="ri-store-line" style="color: #ffbb2c;"></i>
-                                          <h3><a href="">View Demo</a></h3>
+                                          <h3><a href="https://www.youtube.com/watch?v=XK-Ilt1NpW8&t=36s">View Demo</a></h3>
                                       </div>
                                   </div>
                               </div>
