--- a/turtle.html
+++ b/turtle.html
@@ -125,7 +125,7 @@
 
         <div class="container">
             <div class="copyright">
-                &copy; Copyright <strong><span>CaltechBytes</span></strong>. All Rights Reserved
+                &copy; Copyright <strong><span>CalifoniaTech</span></strong>. All Rights Reserved
             </div>
 
 
