--- a/python-basics.html
+++ b/python-basics.html
@@ -106,7 +106,7 @@
                 <div class="col-lg-3 col-md-3">
                     <div class="icon-box">
                         <i class="ri-calendar-todo-line" style="color: #e80368;"></i>
-                        <h3><a href="https://forms.gle/xfPBKU7xSJbu7tiBA">Sign Up</a></h3>
+                        <h3><a href="https://forms.gle/Td6DJ4qRE6tFWBGi6">Sign Up</a></h3>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4">
@@ -126,7 +126,7 @@
 
         <div class="container">
             <div class="copyright">
-                &copy; Copyright <strong><span>CaltechBytes</span></strong>. All Rights Reserved
+                &copy; Copyright <strong><span>CaliforniaTech</span></strong>. All Rights Reserved
             </div>
 
 
