--- a/datascience.html
+++ b/datascience.html
@@ -71,55 +71,79 @@
     <!-- ======= Breadcrumbs ======= -->
     <div class="breadcrumbs">
         <div class="container">
-            <h2>Introduction to Python</h2>
-            <p>No prior coding experience is required. Students should be able to use computer independently for a better learning experience.</p>
+            <h2>Introduction to Data Science</h2>
+            <p>Data Science uses scientific methods, processes, algorithms and systems to extract knowledge and insights from noisy, structured and unstructured data. This class introduces to Machine Learning, Data Analysis, Data Visualization, Jupyter Notebooks, Pandas, Numpy and Scikit-learn. You will be provided with sources and references to continue the learning after the class.</p>
+
+            <h4>Prerequisites: </h4> Students should be familiar with basic programming concepts in Python or Java before enrolling in this class. 
         </div>
-    </div><!-- End Breadcrumbs -->
-        <!-- ======= Popular Courses Section ======= -->
+    </div>
+
+    <!-- ======= Popular Courses Section ======= -->
     <div class="courses">
-                <div class="container px-lg-5" style="border:0px solid green;">
-                    </br>
-                    <h4>Session 1 (45 minutes)</h4>
-                    <ul>
-                        <li>Create Repl.it account </li>
-                        <li>Hands-on Coding to draw shapes using Turtle</li>
-                        <li>Introduction to Commands</li>
-                        <li>color</li>
-                        <li>left, right for angular direction</li>
-                        <li>forward, backward</li>
-                        <li>penup, pendown, goto</li>
-                        <li>Homework Assignment</li>
-                    </ul>
-                    <h4>Session 2 (45 minutes)</h4>
-                    <ul>
-                        <li>Learnings from home assignment</li>
-                        <li>Use loops and conditional statements</li>
-                        <li>Star Shape and Colorfill</li>
-                        <li>Fireworks Project</li>
-                        <li>Add sounds</li>
-                        <li>References for future learning.</li>
-                    </ul>
+        <div class="container px-lg-5" style="border:0px solid green;">
+            </br>
+            <h4>Day 1 </h4>
+            <ul>
+                <li>Introduction to Numpy</li>
+                <li>Arrays Slicing</li>
+                <li>Arrays Indexing</li>
+                <li>Array Shape</li>
+                <li>Array Split</li>
+                <li>Array Sort</li>
+            </ul>
 
 
-                    <div class="row course-links">
-                        <div class="col-lg-3 col-md-3">
-                            <div class="icon-box">
-                                <i class="ri-calendar-todo-line" style="color: #e80368;"></i>
-                                <h3><a href="https://forms.gle/Td6DJ4qRE6tFWBGi6">Sign Up</a></h3>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-4">
-                            <div class="icon-box">
-                                <i class="ri-store-line" style="color: #ffbb2c;"></i>
-                                <h3><a href="https://youtu.be/mpWP_z9_2ic">View Demo</a></h3>
-                            </div>
-                        </div>
+            <h4>Day 2 </h4>
+            <ul>
+                <li>Introduction to Pandas</li>
+                <li>Pandas DataFrames</li>
+                <li>Pandas Series</li>
+                <li>Read CSV</li>
+                <li>Read JSON</li>
+                <li>Analyzing Data</li>
+
+            </ul>
+
+
+            <h4>Day 3 </h4>
+            <ul>
+                <li>Project - Spotify Song Recommendations (Part 1)</li>
+                <li>Download and Visualize Data</li>
+                <li>Features of Songs</li>
+                <li>Scatter Plots</li>
+                
+            </ul>
+
+            <h4>Day 4 </h4>
+            <ul>
+                <li>Project - Spotify Song Recommendations (Part 2)</li>
+                <li>Minimal Distance</li>
+                <li>Quantify Similarity with Multiple features</li>
+                <li>Data Normalization</li>
+                <li>Cosine Similarity</li>
+
+            </ul>
+
+
+            <div class="row course-links">
+                <div class="col-lg-3 col-md-3">
+                    <div class="icon-box">
+                        <i class="ri-calendar-todo-line" style="color: #e80368;"></i>
+                        <h3><a href="https://forms.gle/QRm2Fqp82FsgxDRW6">Sign Up</a></h3>
                     </div>
-
-                    <br>
                 </div>
-           
-   </div>
+                <div class="col-lg-3 col-md-4">
+                    <div class="icon-box">
+                        <i class="ri-store-line" style="color: #ffbb2c;"></i>
+                        <h3><a href="">View Demo</a></h3>
+                    </div>
+                </div>
+            </div>
+
+            <br>
+        </div>
+
+    </div>
     <!-- ======= Footer ======= -->
     <footer id="footer">
 
