--- a/python-basics.html
+++ b/python-basics.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>caltechbytes - learn to code</title>
+    <title>gotechbytes - learn to code</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -80,7 +80,7 @@
     <div class="courses">
         <div class="container px-lg-5" style="border:0px solid green;">
             </br>
-            <h4>Session 1 (60 minutes)</h4>
+            <h4>Day 1 </h4>
             <ul>
                 <li>Create Repl.it account </li>
                 <li>Data Types, Variables and Statements</li>
@@ -91,13 +91,23 @@
             </ul>
 
 
-            <h4>Session 2 (60 minutes)</h4>
+            <h4>Day 2 </h4>
             <ul>
+                <li>Review Project 1</li>
                 <li>String Manipulation</li>
                 <li>Conditional Statements</li>
                 <li>For and While loops</li>
                 <li>File Processing</li>
                 <li>Project 2 - Pascal Triangle</li>
+                
+            </ul>
+
+
+            <h4>Day 3 </h4>
+            <ul>
+                <li>Review Project 3</li>
+                <li>More Strings</li>
+                <li>More Loops</li>
                 <li>Project 3 - Reading Comprehension in Python</li>
             </ul>
 
@@ -106,13 +116,13 @@
                 <div class="col-lg-3 col-md-3">
                     <div class="icon-box">
                         <i class="ri-calendar-todo-line" style="color: #e80368;"></i>
-                        <h3><a href="https://forms.gle/Td6DJ4qRE6tFWBGi6">Sign Up</a></h3>
+                        <h3><a href="https://forms.gle/EGXwVzK5Y9Jz1hGU6">Sign Up</a></h3>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4">
                     <div class="icon-box">
                         <i class="ri-store-line" style="color: #ffbb2c;"></i>
-                        <h3><a href="">View Demo</a></h3>
+                        <h3><a href="https://youtu.be/vg0mI3AGbEQ">View Demo</a></h3>
                     </div>
                 </div>
             </div>
@@ -126,7 +136,7 @@
 
         <div class="container">
             <div class="copyright">
-                &copy; Copyright <strong><span>CaliforniaTech</span></strong>. All Rights Reserved
+                &copy; Copyright <strong><span>GoTechBytes</span></strong>. All Rights Reserved
             </div>
 
 
