--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
               <div class="row">
 
 
-                  <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-out" data-aos-delay="200">
-                      <div class="course-item">
+                  <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+                      <div class="course-item"   data-aos="fade-up" data-delay="100">
                           <img src="assets/img/turtle-star.png" class="rounded mx-auto d-block">
                           <div class="course-content">
                               <div class="d-flex justify-content-between align-items-center mb-3">
@@ -148,8 +148,8 @@
                       </div>
                   </div> <!-- End Course Item 1 -->
 
-                  <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-out" data-aos-delay="300">
-                      <div class="course-item">
+                  <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+                      <div class="course-item"   data-aos="fade-up" data-delay="200">
                           <img src="assets/img/python-basic.png" class="rounded mx-auto d-block">
                           <div class="course-content">
                               <div class="d-flex justify-content-between align-items-center mb-3">
@@ -189,8 +189,8 @@
                       </div>
                   </div> <!-- End Course Item 2 -->
 
-                  <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-out" data-aos-delay="400">
-                      <div class="course-item">
+                  <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+                      <div class="course-item"   data-aos="fade-up" data-delay="300">
                           <img src="assets/img/python-advanced.png" class="rounded mx-auto d-block">
                           <div class="course-content">
                               <div class="d-flex justify-content-between align-items-center mb-3">
@@ -231,8 +231,8 @@
                   </div> <!-- End Course Item 3-->
 
 
-                  <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-out" data-aos-delay="600">
-                      <div class="course-item">
+                  <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+                      <div class="course-item"  data-aos="fade-up" data-delay="400">
                           <img src="assets/img/swift.png" class="rounded mx-auto d-block">
                           <div class="course-content">
                               <div class="d-flex justify-content-between align-items-center mb-3">
@@ -274,8 +274,8 @@
                       </div>
                   </div> <!-- End Course Item 4 -->
 
-                  <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-out" data-aos-delay="800">
-                      <div class="course-item">
+                  <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+                      <div class="course-item"  data-aos="fade-up" data-delay="500">
                           <img src="assets/img/htmlcss.png" class="rounded mx-auto d-block">
                           <div class="course-content">
                               <div class="d-flex justify-content-between align-items-center mb-3">
@@ -313,8 +313,8 @@
                       </div>
                   </div> <!-- End Course Item 5 -->
 
-                  <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-out" data-aos-delay="1000">
-                      <div class="course-item">
+                  <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+                      <div class="course-item"  data-aos="fade-up" data-delay="600">
                           <img src="assets/img/congress-2.jpeg" class="rounded mx-auto d-block">
                           <div class="course-content">
                               <div class="d-flex justify-content-between align-items-center mb-3">
