--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                               </p>
 
                               <div class="row">
-                                  <h5><a class="link-success" href="python-advanced.html">View Syllabus</a></h5>
+                                  <h5><a class="link-success" href="datascience.html">View Syllabus</a></h5>
                               </div>
 
 
