--- a/index.html
+++ b/index.html
@@ -132,13 +132,13 @@
                                   <div class="col-lg-6 col-md-4">
                                       <div class="icon-box">
                                           <i class="ri-calendar-todo-line" style="color: #e80368;"></i>
-                                          <h3><a href="https://forms.gle/Td6DJ4qRE6tFWBGi6">Sign Up</a></h3>
+                                          <h3><a href="https://forms.gle/Td6DJ4qRE6tFWBGi6" target="_blank">Sign Up</a></h3>
                                       </div>
                                   </div>
                                   <div class="col-lg-6 col-md-4 mt-4 mt-md-0">
                                       <div class="icon-box">
                                           <i class="ri-store-line" style="color: #ffbb2c;"></i>
-                                          <h3><a href="https://youtu.be/mpWP_z9_2ic">View Demo</a></h3>
+                                          <h3><a href="https://youtu.be/mpWP_z9_2ic" target="_blank">View Demo</a></h3>
                                       </div>
                                   </div>
                               </div>
@@ -173,13 +173,13 @@
                                   <div class="col-lg-6 col-md-4">
                                       <div class="icon-box">
                                           <i class="ri-calendar-todo-line" style="color: #e80368;"></i>
-                                          <h3><a href="https://forms.gle/EGXwVzK5Y9Jz1hGU6">Sign Up</a></h3>
+                                          <h3><a href="https://forms.gle/EGXwVzK5Y9Jz1hGU6" target="_blank">Sign Up</a></h3>
                                       </div>
                                   </div>
                                   <div class="col-lg-6 col-md-4 mt-4 mt-md-0">
                                       <div class="icon-box">
                                           <i class="ri-store-line" style="color: #ffbb2c;"></i>
-                                          <h3><a href="https://youtu.be/vg0mI3AGbEQ">View Demo</a></h3>
+                                          <h3><a href="https://youtu.be/vg0mI3AGbEQ" target="_blank">View Demo</a></h3>
                                       </div>
                                   </div>
                               </div>
@@ -214,13 +214,13 @@
                                   <div class="col-lg-6 col-md-4">
                                       <div class="icon-box">
                                           <i class="ri-calendar-todo-line" style="color: #e80368;"></i>
-                                          <h3><a href="https://forms.gle/QRm2Fqp82FsgxDRW6">Sign Up</a></h3>
+                                          <h3><a href="https://forms.gle/QRm2Fqp82FsgxDRW6" target="_blank">Sign Up</a></h3>
                                       </div>
                                   </div>
                                   <div class="col-lg-6 col-md-4 mt-4 mt-md-0">
                                       <div class="icon-box">
                                           <i class="ri-store-line" style="color: #ffbb2c;"></i>
-                                          <h3><a href="https://youtu.be/XWJN-Trxu_s">View Demo</a></h3>
+                                          <h3><a href="https://youtu.be/XWJN-Trxu_s" target="_blank">View Demo</a></h3>
                                       </div>
                                   </div>
                               </div>
@@ -233,16 +233,16 @@
 
                   <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
                       <div class="course-item"  data-aos="fade-up" data-delay="400">
-                          <img src="assets/img/swift.png" class="rounded mx-auto d-block">
+                          <img src="assets/img/dotnet.png" class="rounded mx-auto d-block">
                           <div class="course-content">
                               <div class="d-flex justify-content-between align-items-center mb-3">
 
                               </div>
-                              <h2><a class="link-success" href="swiftui.html">Introduction to Swift</a></h2>
+                              <h2><a class="link-success" href="dotnet.html" target="_blank">Develop .Net Applications</a></h2>
 
 
                               <p>
-                                  This class is designed for absolute beginners and it introduces you to iOS app development with Xcode and SwiftUI. You will be creating 2 iOS apps to learn the essential skills in Swift.
+                                  This class is designed for absolute beginners. Students will learn to use Visual Studio and Unity programming environment. Students will develop algorithms using programming language C# and Unity Software.  
                                
                                   <br />
                                   <br />
@@ -258,13 +258,13 @@
                                   <div class="col-lg-6 col-md-4">
                                       <div class="icon-box">
                                           <i class="ri-calendar-todo-line" style="color: #e80368;"></i>
-                                          <h3><a href="https://forms.gle/NYF7phS8VCwdsu9V9">Sign Up</a></h3>
+                                          <h3><a href="https://forms.gle/NYF7phS8VCwdsu9V9" target="_blank">Sign Up</a></h3>
                                       </div>
                                   </div>
                                   <div class="col-lg-6 col-md-4 mt-4 mt-md-0">
                                       <div class="icon-box">
                                           <i class="ri-store-line" style="color: #ffbb2c;"></i>
-                                          <h3><a href="">View Syllabus</a></h3>
+                                          <h3><a href="dotnet.html" target="_blank">View Syllabus</a></h3>
                                       </div>
                                   </div>
                               </div>
