--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
           <div class="container" data-aos="fade-in">
 
               <div class="section-title">
-                  <h2>Popular Courses</h2>
+                  <h2>Courses</h2>
 
               </div>
 
