--- a/python-basics.html
+++ b/python-basics.html
@@ -116,7 +116,7 @@
                 <div class="col-lg-3 col-md-3">
                     <div class="icon-box">
                         <i class="ri-calendar-todo-line" style="color: #e80368;"></i>
-                        <h3><a href="https://forms.gle/EGXwVzK5Y9Jz1hGU6">Sign Up</a></h3>
+                        <h3><a href="https://forms.gle/4UPxG7BzHX2BfrHXA">Sign Up</a></h3>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4">
