--- a/webdesign.html
+++ b/webdesign.html
@@ -71,23 +71,10 @@
     <!-- ======= Breadcrumbs ======= -->
     <div class="breadcrumbs">
         <div class="container">
-            <h2>Develop .Net Applications</h2>
-            <p>This class is designed for absolute beginners. Students will learn to use Visual Studio and Unity programming environment. Students will develop algorithms using programming language C# and Unity Software. Every  </p>
+            <h2>Learn Web Design</h2>
+            <p>In this course students will learn about the web design, HTML, CSS and BootStrap. Students will also learn how to launch their own website, domain registeration, creating a website (like this one) using github pages.</p>
 
-            <h4>Resources: </h4>
-            <ul>
-    
-                <li>Unity <a href="https://unity.com/" target="_blank">https://unity.com/</a> (Download Free Personal Version 2019.1.4 for yourself before the class) This includes the Visual studio package.</li>
-
-                <li>
-                    Microsoft Visual Studio 2019 (Download 2019 version, scroll to bottom, click "older downloads", then scroll until you see 2017, select the community version (v 15.9), make sure it has ConsoleApp.NET framework as an option when you open it, use x64)
-                    <a href="https://visualstudio.microsoft.com/downloads/" target="_blank">https://visualstudio.microsoft.com/downloads/</a>
-                       (You do not need to download this if you already downloaded Unity, but if you are unable to download unity for any reason, then please download this.)
-                </li>
-
-                <li>Web-based compiler in case of technical difficulties: <a href="https://replit.com/" target="_blank">https://replit.com/</a> </li>
-            </ul>
-
+            <h4>Prerequisites: </h4> No prior coding experience is required. Students should be able to use computer independently for a better learning experience.
         </div>
     </div>
 
@@ -97,47 +84,43 @@
             </br>
             <h4>Day 1 </h4>
             <ul>
-                <li>Hello World in C#</li>
-                <li>Data Types, Variables, Literals, Operators</li>
-                <li>Keywords, Switch Statements
-                <li>Break, Continue, Goto, Return and Throw</li>
-                <li>Loops in C#</li>
-
+                <li><strong>HTML </strong></li>
+                <li>Basic Tags</li>
+                <li>Tables</li>
+                <li>Images</li>
+                <li>Lists</li>
+                <li>Links</li>
             </ul>
 
 
             <h4>Day 2</h4>
             <ul>
-                <li>Class and Object</li>
-                <li>Constructors</li>
-                <li>Inheritance</li>
-                <li>Encapsulation</li>
-                <li>Abstraction</li>
-                <li>Project 1. Fortune Teller</li>
-
+                <li><strong>CSS</strong></li>
+                <li>Inline, Embedded and External CSS</li>
+                <li>Basic CSS Selectors</li>
+                <li>Hierarchy</li>
+                <li>Attribute Selector and Properties</li>
             </ul>
 
 
             <h4>Day 3</h4>
             <ul>
-                <li>Methods</li>
-                <li>Method Overloading</li>
-                <li>Method Overriding</li>
-                <li>Method Hiding</li>
-                <li>String Functions</li>
-                <li>Project 2. Whack a Mole</li>
+                <li><strong>Bootstrap</strong></li>
+                <li>Setup</li>
+                <li>Grid System</li>
+                <li>Components - Labels, Buttons, Forms</li>
+                <li>Input Group</li>
+                <li>Navbar</li>
             </ul>
 
-            <h4>Day 4</h4>
+            <h4>Day 3</h4>
             <ul>
-                <li>Project 2. Window Form Game</li>
-                <li>Variable declaration/assignment</li>
-                <li>Conditional statements</li>
-                <li>Random number generation</li>
-                <li>Functions</li>
-                <li>Timer</li>
-                <li>Basic window form controls (button/label/textbox/picturebox)</li>
-
+                <li><strong>Website</strong></li>
+                <li>Domain Registeration</li>
+                <li>Github Pages</li>
+                <li>Jekyll Markdown</li>
+                <li>CName Changes</li>
+                
             </ul>
 
 
@@ -145,7 +128,7 @@
                 <div class="col-lg-3 col-md-3">
                     <div class="icon-box">
                         <i class="ri-calendar-todo-line" style="color: #e80368;"></i>
-                        <h3><a href="https://forms.gle/XSVNH1fUJp5uQ2jTA">Sign Up</a></h3>
+                        <h3><a href="https://forms.gle/z7pNUp2EendbtwgR9">Sign Up</a></h3>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4">
