--- a/datascience.html
+++ b/datascience.html
@@ -129,7 +129,7 @@
                 <div class="col-lg-3 col-md-3">
                     <div class="icon-box">
                         <i class="ri-calendar-todo-line" style="color: #e80368;"></i>
-                        <h3><a href="https://forms.gle/QRm2Fqp82FsgxDRW6">Sign Up</a></h3>
+                        <h3><a href="https://forms.gle/dSgJnZ3ErzaH9rQf9">Sign Up</a></h3>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4">
