--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
                                   <div class="col-lg-6 col-md-4">
                                       <div class="icon-box">
                                           <i class="ri-calendar-todo-line" style="color: #e80368;"></i>
-                                          <h3><a href="https://forms.gle/eGfgbxWVYdkKD5oH9">Sign Up</a></h3>
+                                          <h3><a href="https://forms.gle/uRpQA6yrqK8wg6Zg6">Sign Up</a></h3>
                                       </div>
                                   </div>
                                   <!--<div class="col-lg-6 col-md-4 mt-4 mt-md-0">
