Updates to internal pages

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                               <div class="d-flex justify-content-between align-items-center mb-3">
 
                               </div>
-                              <h2><a class="link-success" href="dotnet.html" target="_blank">Develop .Net Applications</a></h2>
+                              <h2><a class="link-success" href="dotnet.html">Develop .Net Applications</a></h2>
 
 
                               <p>
@@ -262,7 +262,7 @@
                                   <div class="col-lg-6 col-md-4 mt-4 mt-md-0">
                                       <div class="icon-box">
                                           <i class="ri-store-line" style="color: #ffbb2c;"></i>
-                                          <h3><a href="dotnet.html" target="_blank">View Syllabus</a></h3>
+                                          <h3><a href="dotnet.html" >View Syllabus</a></h3>
                                       </div>
                                   </div>
                               </div>
@@ -279,7 +279,7 @@
                               <div class="d-flex justify-content-between align-items-center mb-3">
 
                               </div>
-                              <h2><a class="link-success" href="webdesign.html">Web Design</a></h2>
+                              <h2><a class="link-success" href="webdesign.html" target="_blank">Web Design</a></h2>
 
 
                               <p>
@@ -292,7 +292,7 @@
                                   <div class="col-lg-6 col-md-4">
                                       <div class="icon-box">
                                           <i class="ri-calendar-todo-line" style="color: #e80368;"></i>
-                                          <h3><a href="https://forms.gle/z7pNUp2EendbtwgR9">Sign Up</a></h3>
+                                          <h3><a href="https://forms.gle/z7pNUp2EendbtwgR9" target="_blank">Sign Up</a></h3>
                                       </div>
                                   </div>
                                   <div class="col-lg-6 col-md-4 mt-4 mt-md-0">
@@ -330,7 +330,7 @@
                                   <div class="col-lg-6 col-md-4">
                                       <div class="icon-box">
                                           <i class="ri-calendar-todo-line" style="color: #e80368;"></i>
-                                          <h3><a href="https://forms.gle/uRpQA6yrqK8wg6Zg6">Sign Up</a></h3>
+                                          <h3><a href="https://forms.gle/uRpQA6yrqK8wg6Zg6" target="_blank">Sign Up</a></h3>
                                       </div>
                                   </div>
                                   <!--<div class="col-lg-6 col-md-4 mt-4 mt-md-0">
