--- a/turtle.html
+++ b/turtle.html
@@ -105,13 +105,13 @@
                         <div class="col-lg-3 col-md-3">
                             <div class="icon-box">
                                 <i class="ri-calendar-todo-line" style="color: #e80368;"></i>
-                                <h3><a href="https://forms.gle/2wr5ao3vGvm2HThYA">Sign Up</a></h3>
+                                <h3><a href="https://forms.gle/2wr5ao3vGvm2HThYA" target="_blank">Sign Up</a></h3>
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-4">
                             <div class="icon-box">
                                 <i class="ri-store-line" style="color: #ffbb2c;"></i>
-                                <h3><a href="https://youtu.be/mpWP_z9_2ic">View Demo</a></h3>
+                                <h3><a href="https://youtu.be/mpWP_z9_2ic" target="_blank">View Demo</a></h3>
                             </div>
                         </div>
                     </div>
