--- a/dotnet.html
+++ b/dotnet.html
@@ -145,15 +145,16 @@
                 <div class="col-lg-3 col-md-3">
                     <div class="icon-box">
                         <i class="ri-calendar-todo-line" style="color: #e80368;"></i>
-                        <h3><a href="https://forms.gle/XSVNH1fUJp5uQ2jTA">Sign Up</a></h3>
+                        <h3><a href="https://forms.gle/XSVNH1fUJp5uQ2jTA" target="_blank">Sign Up</a></h3>
                     </div>
                 </div>
+                <!--
                 <div class="col-lg-3 col-md-4">
                     <div class="icon-box">
                         <i class="ri-store-line" style="color: #ffbb2c;"></i>
                         <h3><a href="">View Demo</a></h3>
                     </div>
-                </div>
+                </div> -->
             </div>
 
             <br>
