--- a/python-basics.html
+++ b/python-basics.html
@@ -116,13 +116,13 @@
                 <div class="col-lg-3 col-md-3">
                     <div class="icon-box">
                         <i class="ri-calendar-todo-line" style="color: #e80368;"></i>
-                        <h3><a href="https://forms.gle/4UPxG7BzHX2BfrHXA">Sign Up</a></h3>
+                        <h3><a href="https://forms.gle/4UPxG7BzHX2BfrHXA" target="_blank">Sign Up</a></h3>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4">
                     <div class="icon-box">
                         <i class="ri-store-line" style="color: #ffbb2c;"></i>
-                        <h3><a href="https://youtu.be/vg0mI3AGbEQ">View Demo</a></h3>
+                        <h3><a href="https://youtu.be/vg0mI3AGbEQ" target="_blank">View Demo</a></h3>
                     </div>
                 </div>
             </div>
