--- a/webdesign.html
+++ b/webdesign.html
@@ -128,15 +128,17 @@
                 <div class="col-lg-3 col-md-3">
                     <div class="icon-box">
                         <i class="ri-calendar-todo-line" style="color: #e80368;"></i>
-                        <h3><a href="https://forms.gle/z7pNUp2EendbtwgR9">Sign Up</a></h3>
+                        <h3><a href="https://forms.gle/z7pNUp2EendbtwgR9" target="_blank">Sign Up</a></h3>
                     </div>
                 </div>
+                <!--
                 <div class="col-lg-3 col-md-4">
                     <div class="icon-box">
                         <i class="ri-store-line" style="color: #ffbb2c;"></i>
                         <h3><a href="">View Demo</a></h3>
                     </div>
                 </div>
+                -->
             </div>
 
             <br>
