--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
                     <li><a class="nav-link scrollto" href="index.html#hero">Home</a></li>
                     <li><a class="nav-link scrollto" href="index.html#popular-courses">Courses</a></li>
                     <li><a class="nav-link scrollto" href="index.html#faq">FAQ</a></li>
-                    <li><a class="nav-link scrollto " href="aboutus.html">About Us</a></li>
+                    <li><a class="nav-link scrollto " href="index.html#about">About Us</a></li>
                     <li><a class="nav-link scrollto active" href="contact.html">Contact</a></li>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
