--- a/volunteer.html
+++ b/volunteer.html
@@ -38,6 +38,7 @@
 
 <body>
     
+
     <!-- ======= Header ======= -->
     <header id="header" class="fixed-top d-flex align-items-center">
         <div class="container d-flex align-items-center">
@@ -54,8 +55,8 @@
                     <li><a class="nav-link scrollto" href="index.html#popular-courses">Courses</a></li>
                     <li><a class="nav-link scrollto" href="index.html#faq">FAQ</a></li>
                     <li><a class="nav-link scrollto" href="aboutus.html">About Us</a></li>
-                    <li><a class="nav-link scrollto" href="volunteer.html">Volunteer</a></li>
-                    <li><a class="nav-link scrollto active" href="contact.html">Contact</a></li>
+                    <li><a class="nav-link scrollto active" href="volunteer.html">Volunteer</a></li>
+                    <li><a class="nav-link scrollto" href="contact.html">Contact</a></li>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
             </nav><!-- .navbar -->
@@ -76,8 +77,7 @@
 
             <div class="section-title" data-aos="zoom-in">
                 <br />
-
-                <h2>Contact Us</h2>
+                <h1>Spread Your Knowledge <span style="font-size:12px; vertical-align: middle;">&#9632;</span> Volunteer With Us</h1>
                 <br />
             </div>
 
@@ -89,7 +89,7 @@
                 </div>
 
                 <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch" data-aos="fade-left">
-                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSexVZMe7w7n5id5sT22j1qHG74hc2znQqkPGZs9oRd3SoVoQQ/viewform?embedded=true" width="640" height="812" scrolling="no" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfb726slgYJg8wkFkNIQQN8mJPndq_lMPq40nzuwF0OF7rxTA/viewform?embedded=true" width="640" height="999" scrolling="no" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
                 </div>
 
             </div>
