--- a/contact.html
+++ b/contact.html
@@ -75,10 +75,9 @@
         <div class="container">
 
             <div class="section-title" data-aos="zoom-in">
-                <br />
-
-                <h2>Contact Us</h2>
-                <br />
+                
+                <h1>Contact Us</h1>
+               
             </div>
 
             <div class="row">
@@ -89,7 +88,7 @@
                 </div>
 
                 <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch" data-aos="fade-left">
-                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSexVZMe7w7n5id5sT22j1qHG74hc2znQqkPGZs9oRd3SoVoQQ/viewform?embedded=true" width="640" height="812" scrolling="no" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSexVZMe7w7n5id5sT22j1qHG74hc2znQqkPGZs9oRd3SoVoQQ/viewform?embedded=true" width="720" height="840" scrolling="no" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
                 </div>
 
             </div>
@@ -100,8 +99,10 @@
     <footer id="footer">
 
         <div class="container">
+
             <div class="copyright">
-                &copy; Copyright <strong><span>CaltechBytes</span></strong>. All Rights Reserved
+                A non-profit, K-12 STEM initiative by the high-school students. <br />
+                &copy; Copyright <strong><span>GoTechBytes</span></strong>. All Rights Reserved.
             </div>
 
 
