--- a/volunteer.html
+++ b/volunteer.html
@@ -89,7 +89,7 @@
                 </div>
 
                 <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch" data-aos="fade-left">
-                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfb726slgYJg8wkFkNIQQN8mJPndq_lMPq40nzuwF0OF7rxTA/viewform?embedded=true" width="640" height="999" scrolling="no" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfb726slgYJg8wkFkNIQQN8mJPndq_lMPq40nzuwF0OF7rxTA/viewform?embedded=true" width="720" height="1040" scrolling="no" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
                 </div>
 
             </div>
@@ -100,10 +100,14 @@
     <footer id="footer">
 
         <div class="container">
+
             <div class="copyright">
-                &copy; Copyright <strong><span>CaltechBytes</span></strong>. All Rights Reserved
+                A non-profit, K-12 STEM initiative by the high-school students. <br />
+                &copy; Copyright <strong><span>GoTechBytes</span></strong>. All Rights Reserved.
             </div>
 
+
+        </div>
 
         </div>
 
