--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@
                               </h2>
                               <div id="faq2-content-3" class="accordion-collapse collapse" data-bs-parent="#faqlist2">
                                   <div class="accordion-body">
-                                      Of course. You should be enrolled as a high school student to be an instructor. Please send a request through contact-us. We will reach out to you in 2-3 business days.
+                                      Of course. You should be enrolled as a high school student to be an instructor. Please submit your interest through <a href="volunteer.html">Volunteer form</a>. We will reach out to you in 3 business days.
                                   </div>
                               </div>
                           </div>
