--- a/aboutus.html
+++ b/aboutus.html
@@ -80,7 +80,7 @@
 
                 <div class="col-lg-6 pt-4 pt-lg-0 content">
                     <h4>
-                        GoTech Bytes is a student run non-profit educational and community service organization.
+                        GoTech Bytes is a student run 501(c)(3) non-profit educational and community service organization.
                     </h4>
                     <ul>
                         <li><i class="bi bi-check-circle"></i> Students teaching other students</li>
