--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@
       <div class="container">
           
           <div class="copyright">
-              A non-profit, K-12 STEM initiative by the high-school students. <br />
+              A 501(c)(3) non-profit, K-12 STEM initiative by the high-school students. <br />
               &copy; Copyright <strong><span>GoTechBytes</span></strong>. All Rights Reserved.
           </div>
 
