--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                         <div class="course-item">
                             <div class="card-up course_bg2"></div>
                             <div class="avatar mx-auto white text-center">
-                                <img src="assets/img/python-basic.jpg" class="rounded-circle img-responsive img2">
+                                <img src="assets/img/python-basic.png" class="rounded-circle img-responsive img2">
                             </div>
                             <div class="course-content">
                                 <div class="d-flex justify-content-between align-items-center">
